デフォルト視点を東京に，metaタグ追加

--- a/Cesium/Widgets/widgets.css
+++ b/Cesium/Widgets/widgets.css
@@ -14,3 +14,7 @@
 @import url(./SelectionIndicator/SelectionIndicator.css);
 @import url(./Timeline/Timeline.css);
 @import url(./Viewer/Viewer.css);
+
+.cesium-viewer-bottom {
+    display:none;
+}
