--- a/Cesium/Widgets/widgets.css
+++ b/Cesium/Widgets/widgets.css
@@ -20,22 +20,51 @@
 }
 
 #magnification {
+    font-family: Arial;
+    width:100px;
+    margin-left:-50px;
+    text-align:center;
     position:absolute;
-    font-size:32px;
-    bottom:8px;
-    left:8px;
-    color:white;
+    font-size:18px;
+    bottom:2px;
+    left:50%;
     z-index:10000;
+    color: rgb(255, 255, 255);
+    text-shadow: rgb(0, 0, 0) 0px 0px 10px;
 }
 
 #changeExaggeration {
+    opacity:0.8;
     position: absolute;
-    bottom: 8px;
+    bottom: 12px;
     left: 8px;
-    z-index: 10000;
+    z-index: 10001;
     width: 50%;
     left: 50%;
     margin-left: -25%;
+}
+
+#button {
+    opacity:0.9;
+    text-align:center;
+    position:absolute;
+    bottom:40px;
+    left:50%;
+    width:60px;
+    margin-left:-40px;
+    z-index:10001;
+    -webkit-border-radius: 20;
+    -moz-border-radius: 20;
+    border-radius: 20px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 17px;
+    background: #616161;
+    padding: 5px 10px 5px 10px;
+    text-decoration: none;
+    box-shadow:0px 0px 7px 0px #000000;
+    -moz-box-shadow:0px 0px 7px 0px #000000;
+    -webkit-box-shadow:0px 0px 7px 0px #000000;
 }
 
 input[type=range] {
@@ -58,13 +87,13 @@ input[type=range]::-webkit-slider-runnable-track {
 input[type=range]::-webkit-slider-thumb {
   box-shadow: 0.9px 0.9px 1px #000031, 0px 0px 0.9px #00004b;
   border: 1.8px solid #00001e;
-  height: 35px;
-  width: 35px;
-  border-radius: 35px;
+  height: 30px;
+  width: 30px;
+  border-radius: 30px;
   background: #ffffff;
   cursor: pointer;
   -webkit-appearance: none;
-  margin-top: -16.7px;
+  margin-top: -15px;
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
   background: rgba(255, 255, 255, 0.75);
