--- a/Cesium/Widgets/BaseLayerPicker/BaseLayerPicker.css
+++ b/Cesium/Widgets/BaseLayerPicker/BaseLayerPicker.css
@@ -15,6 +15,7 @@
     box-sizing: content-box;
     top: auto;
     right: 0;
+    /*
     width: 320px; /* Includes space needed for scrollbar */
     max-height: 500px;
     margin-top: 5px;
@@ -49,7 +50,7 @@
 }
 
 .cesium-baseLayerPicker-sectionTitle {
-    display: block;
+    display: none;
     font-family: sans-serif;
     font-size: 16pt;
     text-align: left;
