--- a/Cesium/Widgets/CesiumWidget/CesiumWidget.css
+++ b/Cesium/Widgets/CesiumWidget/CesiumWidget.css
@@ -10,13 +10,9 @@
 
 .cesium-widget-credits {
     display: block;
-    position: absolute;
-    bottom: 0;
-    left: 0;
     color: #fff;
-    font-size: 10px;
-    text-shadow: 0px 0px 2px #000000;
-    padding-right: 5px;
+    font-size: 6px;
+    opacity:0.75;
 }
 
 .cesium-widget-credits a,
