各機能を関数化

--- a/Cesium/Widgets/widgets.css
+++ b/Cesium/Widgets/widgets.css
@@ -15,6 +15,10 @@
 @import url(./Timeline/Timeline.css);
 @import url(./Viewer/Viewer.css);
 
+body {
+  background-color:black;
+}
+
 .cesium-viewer-toolbar{
   z-index:10001;
 }
