--- a/Cesium/Widgets/widgets.css
+++ b/Cesium/Widgets/widgets.css
@@ -48,7 +48,7 @@
     width:100px;
     margin-left:-50px;
     text-align:center;
-    position:absolute;
+    position:fixed;
     font-size:18px;
     bottom:2px;
     left:50%;
@@ -59,7 +59,7 @@
 
 #changeExaggeration {
     opacity:0.8;
-    position: absolute;
+    position: fixed;
     bottom: 12px;
     left: 8px;
     z-index: 10001;
@@ -71,7 +71,7 @@
 #button {
     opacity:0.9;
     text-align:center;
-    position:absolute;
+    position:fixed;
     bottom:40px;
     left:50%;
     width:60px;
